# flickrfinder

./: .env.example  .gitignore  INSTALL.md  PLAN.md  README.md  README_example_safe_prompt_to_use_to_have_claude_code_install_this_app  pyproject.toml
deploy/: com.flickrfinder.server.plist  install-launchd.sh
src/flickrfinder/: config.py
src/flickrfinder/api/: app.py
src/flickrfinder/cli/: main.py
src/flickrfinder/core/: db.py  downloads.py  exif_normalize.py  facets.py  flickr_client.py  models.py  search.py  sync.py
tests/: test_search.py
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  api.ts  filters.ts
web/src/components/: FilterSidebar.tsx  Pager.tsx  PhotoCard.tsx  PhotoDetail.tsx  ResultGrid.tsx  SummaryView.tsx  SyncStatus.tsx  Toolbar.tsx
