[project]
name = "flickrfinder"
version = "0.1.0"
description = "Search your Flickr photos by EXIF metadata"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "flickrapi>=2.4.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "requests>=2.32.0",
]

[project.scripts]
flickrfinder = "flickrfinder.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flickrfinder"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# FastAPI Query()/Depends() and Typer Option() are intended to be used as defaults.
"src/flickrfinder/api/*.py" = ["B008"]
"src/flickrfinder/cli/*.py" = ["B008"]
